--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "quill-image-resize-module-react": "^3.0.0",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0",
