--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "html-react-parser": "^5.1.15",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "quill-image-resize-module-react": "^3.0.0",
@@ -19,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
