--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "slugify": "^1.6.6"
   }
 }
