--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
+    "slugify": "^1.6.6",
     "yup": "^1.4.0",
     "zustand": "^4.5.5"
   },
